Insertion du CV

--- a/index.html
+++ b/index.html
@@ -1,9 +1,50 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Page d'accueil</title>
-     <body>
-        <h1>Bienvenue</h1>
-        <p>Bienvenue sur ma page</p>
-    </body>
+	<head>
+		<title>Lidia Mantesso</title>
+	</head>
+
+	<body>
+		<h1>Lidia Mantesso</h1>
+		<h2>Formation</h2>
+		<h3>Université Libre de Bruxelles : 2018 - </h3>
+		<h4>Master en Sciences et Technologies de l'Information et de la Communication</h4>
+		<h3>Haute École Louvain en Hainaut : 2015-2018</h3>
+		<h4>Bachelier professionnalisant en Relations Publiques, distinction</h4>
+		<p>Erasmus Belgica à Karel de Grote Hogeschool : 2017-2018</p>
+		<p>Travail de fin d'études : " Analyse d’une campagne de communication interne à la sensibilisation aux dangers de l’utilisation des appareils multimédias durant la conduite : Projet FOCUS à la STIB (205 p.)</p>
+		<p>Travaux réalisés : <a href="https://probook.academy/MANTESSO_Lidia/projets" target="_blank">ProBook HELHa</a></p>
+		<p>Prix d'excellence</p>
+		
+<br />
+
+
+		<h2>Expérience professionnelle</h2>
+		<h3>SPF Finances</h3>
+		<h4>Assistante de projets TIC : Sep 2020 - Déc 2020</h4>
+		<p>Stage au sein du département "Services du Président"</p>
+		<p>Assistance à l'implémentation de produits externes, préparation de la migration vers Teams, support TIC, ...</p>
+		<h3>Université Libre de Bruxelles</h3>
+		<h4>Responsable projets : Fév 2019 - Sep 2020 </h4>
+		<p>Pour le Student Green Office, attaché au Service Environnement et Mobilité</p>
+		<p>Responsable du projet "Universit'Air" à propos de la qualité de l'air</p>
+		<p>Assistante logistique pour la Semaine de la Durabilité 2019</p>
+		<p>Assistante au projet des séances d'introduction aux enjeux de la transition écologique et durable aux nouveaux étudiants</p>
+		<p>Community management</p>
+		<h4>Étudiante-assistante : Oct 2019 - Déc 2019</h4>
+		<p>Pour le cours TRAN-B300 : "Introduction aux humanités numériques"</p>
+		<h3>Brussels South Charleroi Airport</h3>
+		<h4>Check-in agent : Avr 2017 - Mai 2019</h4>
+		<p>Check-in et embarquement des passagers pour les compagnies aériennes Ryanair, Wizz Air, TUI et Air Corsica</p>
+		<h3>STIB-MIVB</h3>
+		<h4>Communicateur interne : Fév 2018 - Mai 2018</h4>
+		<p>Stage au sein du département "Opérations" pour le projet FOCUS</p>
+		<p>Rédaction d'articles et de quiz pour l'intranet, suivi d'une expostion, rencontre avec les conducteurs, réalisation d'affichages pour les écrans d'entreprise, ...</p>
+		<h3>Fedactio</h3>
+		<h4>Chargée de relations publiques : Avr 2017 - Mai 2017</h4>
+		<p>Stage linguistique en néerlandais</p>
+		<p>Préparation des olympiades de sciences sociales en Flandres</p>
+<br />
+
+	</body>
 </html>
